@@ -1,7 +1,7 @@
 
 DEFINES += CUBEROK_VERSION_MAJ=0
 DEFINES += CUBEROK_VERSION_MIN=0
-DEFINES += CUBEROK_VERSION_BUI=9
+DEFINES += CUBEROK_VERSION_BUI=10
 
 CONFIG -= debug
 CONFIG += release
